fix hero title img width on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -356,7 +356,7 @@ section > * {
   }
 }
 @media only screen and (max-width: 1300px) {
-  .hero .hero__title {
+  .hero .hero__title img {
     width: 420px;
   }
 }
